# cs5335hw-gazebo

./: Makefile  README.md  demo.world  sim.sh
brain/: .gitignore  brain.cc  robot.cc  robot.hh
cmd/: CMakeLists.txt  Makefile  car_cmd.cc
lindeyang-hw01/: README-HW01.md  brain.cc
models/rplidar_a2/: model.config  model.sdf
models/teapot/: model.rsdf  model.sdf
plugins/: Makefile
plugins/car_control/: CMakeLists.txt  Makefile  car_control.cc
worlds/: hw01.world
